<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HILGen</string>
    
    <string name="button_start_authentication">Start authentication</string>
    <string name="button_cancel_authentication">Cancel authentication</string>
    <string name="button_logout">Logout</string>
    <string name="button_get_photosets">Get photosets</string>
    <string name="button_get_photos">Get photos</string>
    <string name="button_reset_template">Reset template</string>
    <string name="button_templates">Templates&#8230;</string>
    <string name="button_new">New</string>
    <string name="button_save">Save</string>
    <string name="button_delete">Delete</string>
    
    <string name="text_logged_out">Logged out</string>
    <string name="text_waiting_authentication">Waiting authentication&#8230;</string>
    <string name="text_logged_in">Logged in as: %1$s</string>
    <string name="text_name">Name</string>
    <string name="text_outer">Enter global template as \"&#8230; {}
        &#8230;\". \"{}\" will be replaced by inner content.</string>
    <string name="text_inner">Enter image template as \"$X{{ &#8230; {}
        &#8230; }}\", where \"X\" can be \"T\" (title), \"U\" (url),
        \"S\" (source), \"W\" (width) or \"H\" (height). If the value
        specified by \"X\" is null everything inside the double brackets is
        omitted. Otherwise the text is included in the output and \"{}\" will be
        replaced by \"X\"\'s value.</string>
    
	<string name="radio_size_square">Square</string>
	<string name="radio_size_large_square">Large square</string>
	<string name="radio_size_thumbnail">Thumbnail</string>
	<string name="radio_size_small">Small</string>
	<string name="radio_size_small_320">Small 320</string>
	<string name="radio_size_medium">Medium</string> 
	<string name="radio_size_medium_640">Medium 640</string>
	<string name="radio_size_medium_800">Medium 800</string>
	<string name="radio_size_large">Large</string>
	<string name="radio_size_large_1600">Large 1600</string>
	<string name="radio_size_large_2048">Large 2048</string>
	<string name="radio_size_original">Original</string>

    <string name="message_start_authentication_failed">Could not start OAuth authentication</string>
    <string name="message_finish_authentication_failed">Could not finish OAuth authentication</string>
    <string name="message_get_photosets_failed">Could not list photosets</string>
    <string name="message_get_photos_failed">Could not list photos</string>
    <string name="message_deleted_template">Deleted template \"%1$s\"</string>
    <string name="message_saved_template">Saved template \"%1$s\"</string>
    <string name="message_cannot_delete_default">Cannot delete default template</string>
    <string name="message_invalid_size_or_template">Invalid size or template selected</string>
    <string name="message_are_you_sure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    
    <string name="progress_get_photos">Photos fetched: %1$d</string>
    
    <string name="label_clip_data_photo_list">HTML image list</string>
    
    <string name="clipboard_text_set">Text copied to clipboard</string>
    
    <string name="title_activity_photoset">Photoset %1$s: %2$s</string>
    <string name="title_activity_template">Template Editor</string>
    
    <string name="template_default_outer">&lt;div
        class=\"image-block\"&gt;\n\n{}\n\n&lt;/div&gt;</string>
    <string name="template_default_inner">&lt;a $U{{href=\"{}\"
        }}$T{{title=\"{}\" }}&gt;&lt;img $S{{src=\"{}\"
        }}$W{{width=\"{}\" }}$H{{height=\"{}\" }}$T{{alt=\"{}\"
        }}/&gt;&lt;/a&gt;\n\n&lt;div class=\"image-caption
        w-70\"&gt;\n&lt;p&gt;&lt;/p&gt;\n&lt;/div&gt;</string>
    
</resources>
